--- a/index.css
+++ b/index.css
@@ -41,18 +41,16 @@ footer {
   text-align: center;
   color: ghostwhite;
   background-color: var(--main-color);
-  border: 4px double ghostwhite;
+  border: 1px solid ghostwhite;
   outline: none;
   border-radius: 3px;
   font-family: var(--body-font);
   letter-spacing: normal;
   white-space: nowrap;
-  transition: all 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55); }
+  transition: all 0.38s cubic-bezier(0.68, -0.55, 0.27, 1.55); }
   .btn-clay:hover, .btn-clay:active {
     transform: translateX(0.25em) translateY(0.25em);
-    box-shadow: -0.5em 0.5em 0.1em black;
-    border: 1px double ghostwhite;
-    font-size: 0.8em; }
+    box-shadow: -0.5em 0.5em 0.1em black; }
 
 .button-box {
   flex-basis: 0;
@@ -69,7 +67,7 @@ footer {
   display: grid;
   grid-template-rows: 200px 1fr 100px;
   grid-template-columns: auto 1fr;
-  min-height: 100vh;
+  height: 100vh;
   min-width: 330px; }
 
 header {
@@ -78,10 +76,6 @@ header {
 
 main {
   grid-column: 1 / 3;
-  grid-row: 2 / 3; }
-
-.grid__nav {
-  grid-column: 1 / 2;
   grid-row: 2 / 3; }
 
 footer {
@@ -117,11 +111,6 @@ footer {
 
   .btn-clay {
     font-size: 1em; }
-    .btn-clay:hover, .btn-clay:active {
-      transform: translateX(0.25em) translateY(0.25em);
-      box-shadow: -0.5em 0.5em 0.1em black;
-      border: 1px double ghostwhite;
-      font-size: 1.1em; }
 
   .button-box {
     flex-grow: 1; } }
