--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -7,7 +7,7 @@
   text-align      : center;
   color           : ghostwhite;
   background-color: var(--main-color);
-  border          : 4px double ghostwhite;
+  border          : 1px solid ghostwhite;
   outline         : none;
   // margin-top        : 15%;
   // margin-bottom     : 15%;
@@ -15,14 +15,13 @@
   font-family       : var(--body-font);
   letter-spacing    : normal;
   white-space       : nowrap;
-  transition        : all 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
-  // transition        : color 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+  transition        : all 0.38s cubic-bezier(0.68, -0.55, 0.27, 1.55);
     &:hover,
     &:active {
       transform     : translateX(0.25em) translateY(0.25em);
       box-shadow    : -0.5em 0.5em 0.1em black;
-      border        : 1px double ghostwhite;
-      font-size     : 0.8em;
+      // border        : 1px double ghostwhite;
+      // font-size     : 0.8em;
     }
 }
 
