--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-rows   : 200px 1fr 100px;
   grid-template-columns: auto 1fr;
-  min-height           : 100vh;
+  height               : 100%;
   min-width            : 330px;
 }
 
@@ -16,10 +16,10 @@ main {
   grid-row   : 2 / 3;
 }
 
-.grid__nav {
-  grid-column: 1 / 2;
-  grid-row   : 2 / 3;
-}
+// .grid__nav {
+//   grid-column: 1 / 2;
+//   grid-row   : 2 / 3;
+// }
 
 footer {
   grid-column: 1 / 3;
