--- a/styles/sass.css
+++ b/styles/sass.css
@@ -90,7 +90,7 @@ footer {
 
 main {
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
   align-content: stretch; }
@@ -103,8 +103,7 @@ footer {
 
 @media (min-width: 380px) {
   h1 {
-    margin-top: 1.25em;
-    font-size: 4.5em; }
+    margin-top: 1.25em; }
 
   main {
     flex-flow: row wrap; }
@@ -114,3 +113,5 @@ footer {
 
   .button-box {
     flex-grow: 1; } }
+@media (min-width: 500px) {
+  font-size: 4.5em; }
