--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -35,7 +35,7 @@ footer {
 
 main {
   display        : flex;
-  flex-flow      : column wrap;
+  flex-flow      : column nowrap;
   align-items    : center;
   justify-content: center;
   align-content  : stretch;
