--- a/styles/sass/_md-lg.scss
+++ b/styles/sass/_md-lg.scss
@@ -1,7 +1,7 @@
 @media (min-width: 380px) {
   h1 {
     margin-top: 1.25em;
-    font-size : 4.5em; 
+    // font-size : 4.5em; 
   }
 
   main {
@@ -21,5 +21,15 @@
 
   .button-box {
     flex-grow: 1;
+  }
+}
+
+@media (min-width: 500px) {
+  font-size : 4.5em;   
+}
+
+@media (orientation: portrait) {
+  h1 {
+    
   }
 }
