--- a/styles/index.styl
+++ b/styles/index.styl
@@ -22,6 +22,12 @@ a
   width     : 175px
   background: transparent
 
+@media (max-width:576px) {
+  .svg-container {
+    width: 50px;
+  } 
+}
+
 .logos-container
   display        : flex;
   flex-flow      : row wrap;
