--- a/styles/index.styl
+++ b/styles/index.styl
@@ -1,7 +1,7 @@
 @require '../node_modules/vuetify/src/stylus/settings/_colors'
- 
+
 $theme := {
-  primary  : $indigo.lighten-1
+  primary  : #608b4e
   accent   : $teal.accent-3
   secondary: $grey.darken-4
   info     : $indigo.lighten-1
@@ -10,14 +10,14 @@ $theme := {
   success  : $green.lighten-2
 }
 
-.media 
+.media
   height: 100%
   margin: 0px
 
 a
   text-decoration: none
-  
-.svg-container 
+
+.svg-container
   margin    : 5px 10px 5px 10px
   width     : 150px
   background: transparent
@@ -25,7 +25,7 @@ a
 @media (max-width:576px) {
   .svg-container {
     width: 50px;
-  } 
+  }
 }
 
 .logos-container
